# MemorySimulator

./: .gitignore  CMakeLists.txt  Makefile  benchmark-cm.txt  benchmark-cs.txt  deque.c  dlist.c  dlist.h  heap.c  heap.h  process.c  process.h  report.txt  scheduler  scheduler.c  scheduler.h  testcase.txt  testcase_generator.py
scenarios/: timejumps.txt
src/: constants.c  constants.h  deque.c  deque.h  dlist.c  dlist.h  heap.c  heap.h  memory_allocator.c  memory_allocator.h  memory_fragment.c  memory_fragment.h  output.c  output.h  priorityqueue.c  priorityqueue.h  process.c  process.h  processes.txt  scheduler.c  scheduler.h  swapping.c  swapping.h  unlimited.c  unlimited.h  virtual_memory.c  virtual_memory.h
test/: dlist_test.c  swapping_test.c  swapping_test.h
